--- a/main.css
+++ b/main.css
@@ -27,7 +27,31 @@ body {
   background-color: #aef7fa88;
   box-shadow: 1px 1px 1px #2d2e2e;
   height: 15%;
+  margin: 0 2%;
   width: 100%;
+}
+
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  height: 75%;
+  justify-content: space-around;
+  margin: 10% 0 0 0;
+  width: 100%;
+}
+
+button {
+  margin: 2%;
+  text-align: center;
+  width: 20%;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.zero {
+  width: 45%;
 }
 
 @media only screen and (max-width: 700px) {
