--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f5f5f5;
+  font-family: Helvetica, Arial, sans-serif;
   margin: 0;
   min-width: 320px;
   padding: 0;
@@ -28,7 +29,19 @@ body {
   box-shadow: 1px 1px 1px #2d2e2e;
   height: 15%;
   margin: 0 2%;
+  overflow-y: auto;
+  padding: 0 2%;
   width: 100%;
+}
+
+.staged-calculation {
+  margin-top: 1%;
+  text-align: right;
+}
+
+.current-number {
+  margin-top: 0;
+  text-align: right;
 }
 
 .buttons {
@@ -41,6 +54,11 @@ body {
 }
 
 button {
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px #999999;
+  font-size: 2vmin;
+  font-weight: bold;
   margin: 2%;
   text-align: center;
   width: 20%;
@@ -54,8 +72,57 @@ button:hover {
   width: 45%;
 }
 
+.clear {
+  background-color: #33adff;
+  color: #ffffff;
+}
+
+.clear:hover {
+  background-color: #1ba4ff;
+}
+
+.clear:active {
+  background-color: #0099ff;
+  transform: translateY(1px); 
+  transition: ease .1s;
+}
+
+.operator {
+  background-color: #eb5e5e;
+  color: #ffffff;
+}
+
+.operator:hover {
+  background-color: #db3232;
+}
+
+.operator:active {
+  background-color: #ad0606;
+  transform: translateY(1px); 
+  transition: ease .1s;
+}
+
+.number {
+  background-color: #fbfbfb;
+  color: #333333;
+}
+
+.number:hover {
+  background-color: #f1f1f1;
+}
+
+.number:active {
+  background-color: #e1e1e1;
+  transform: translateY(1px); 
+  transition: ease .1s;
+}
+
 @media only screen and (max-width: 700px) {
   .container {
     width: 100vw;
+  }
+
+  button {
+    font-size: 3vmin;
   }
 }
