--- a/main.css
+++ b/main.css
@@ -102,16 +102,16 @@ button:hover {
   transition: ease .1s;
 }
 
-.number {
+.number, .decimal {
   background-color: #fbfbfb;
   color: #333333;
 }
 
-.number:hover {
+.number:hover, .decimal:hover {
   background-color: #f1f1f1;
 }
 
-.number:active {
+.number:active, .decimal:active {
   background-color: #e1e1e1;
   transform: translateY(1px); 
   transition: ease .1s;
